<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AdicionarItemActivity">

    <TextView
        android:id="@+id/tituloNovoItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/TituloInterfaceNovoItem"
        android:textColor="@color/purple_700"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EditTextNome"
        android:layout_width="358dp"
        android:layout_height="52dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/TextCampoNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloNovoItem"/>

    <EditText
        android:id="@+id/EditTextDescricao"
        android:layout_width="358dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/TextCampoDescricao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextNome"/>

    <EditText
        android:id="@+id/EditTextCategoria"
        android:layout_width="358dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/TexCampoCategoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextDescricao"/>

    <EditText
        android:id="@+id/EditTextTamanho"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/TexCampoTamanho"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextCategoria"/>

    <EditText
        android:id="@+id/EditTextPreco"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/TexCampoPreco"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/EditTextTamanho"
        app:layout_constraintTop_toBottomOf="@+id/EditTextCategoria"/>

    <Button
        android:id="@+id/btnAdicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextbtnAdicionar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextTamanho" />

</androidx.constraintlayout.widget.ConstraintLayout>